# expression.py

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
expression/: __init__.py  grammar.peg  helpers.py  tokenizer.py
tests/: test_arrays.py  test_expression.py
